Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

22-Aug-2010 Jean-Marie Simonet
 # [#21659] Beez 2 template (default) restless. Thanks Rouven

21-Aug-2010 Ian MacLennan
 # [#21949] Systematic elimination of DS as directory separator

21-Aug-2010 Jean-Marie Simonet
 # [#21964] Help menu item visible in edit mode if hidden in module settings. Thanks Sander and Bill.
 # [#21921] coding remnant left in module.php. Thanks Troy.
 # [#21915] SEF URL Defaults. Thanks Amy.
 # [#21861] Incorrect plural of "suffix" in method names. Thanks Chris.
 # [#21737] Password reset tokens stored plaintext in the database. Thanks Ian.
 # [#21971] Backend Cache Settings Tooltip Typo. Thanks Rouven.
 # [#21969] Space for label User Name on login page (+ module). Thanks Marijke.
 # [#21968] dot after reset token. Thanks Marijke.
 $ Typos/redundancies in some lang strings.
 
20-Aug-2010 Ian MacLennan
 # [#21951] Action URLs missing in half of the backend forms
 # [#21953] Registration form can be displayed and submitted if registration is disabled
 # [#19223] MySQL strict mode incompatibility
 # [#20343] Update phpmailer to v5.1 (latest version) for php5
 # [#21462] Sample Data Typo
 # [#21474] UTF8 trim lib throws warning if char list is empty
 # [#21580] E_STRICT error in JCacheCallback due to JHtmlString::truncate() being non-static

20-Aug-2010 Mark Dexter
 # [#21774] patch for failing system tests [cache related]

20-Aug-2010 Jean-Marie Simonet
 # [#21947] Banner Client Editing missing Save & New icon and text. Thanks Roland
 #$ Wrong key in Hathor.
 # [#21912] Inconsistencies with submenus in Bluestork admin menus. Thanks Klas.
 # [#21872] Categories overview & Menu items indentations. Thanks Michael.
 # [#21906] SMTP without authentication not working. Thanks Roland and Ian.